# lang-chain-example

./: .gitignore  README.md  main.py  pyproject.toml
resources/: intestellar.txt  movies.csv  sample_text.csv
source/: __init__.py  app.py  sample_reader.py
