[project]
name = "lang-chain-exmple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "libmagic>=1.0",
    "numpy>=2.3.2",
    "openai>=1.99.6",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.48.0",
    "tiktoken>=0.11.0",
    "unstructured>=0.18.11",
]
